[package]
name = "sqlite-mcp-server"
version = "0.1.0"
edition = "2024"
authors = ["Marek Kucak <marek.kucak@proton.me>"]
description = "An MCP server for SQLite database interaction"
license = "MIT"

[dependencies]
# anet-mcp-server = "0.1.0"
anet_mcp_server = { path = "../anet-mcp-server" }
tokio = { version = "1.32", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
dotenv = "0.15"
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-nats = "0.32"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"], optional = true }

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "test_client"
path = "examples/test_client.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[features]
default = []
http = ["reqwest"]
