[project]
name = "mysql_mcp_server"
version = "0.2.1"
description = "A Model Context Protocol (MCP) server that enables secure interaction with MySQL databases..."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # MCP関連パッケージ（必要に応じて使う）
    # "mcp-server>=1.0.0",
    # "mcp-types>=1.0.0",

    # MySQL接続
    "mysql-connector-python>=8.0.0",
    "aiomysql>=0.1.0",

    # 型バリデーション・補助
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",

    # 非同期サポート（あえて不要、Python 3.11 には内蔵されてるけど明示するならOK）
    "asyncio>=3.4.3",

    # 環境変数等
    "python-dotenv>=0.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-asyncio>=0.19.0",
    "pytest-cov>=2.12.0"
]

[[project.authors]]
name = "Eita Oota"
email = "eitaoota199303@gmail.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mysql_mcp_server = "mysql_mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mysql_mcp_server"]
