[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "google-play-mcp"
version = "0.6.0"
description = "Google Play Console MCP Server — manage the full app release lifecycle from your AI assistant."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "google-play", "android", "play-console"]
dependencies = [
    "mcp[cli]>=1.3.0",
    "google-auth>=2.28.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.120.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
google-play-mcp = "google_play_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/google_play_mcp"]
