[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-postgres-analytics"
version = "0.1.0"
description = "Read-only PostgreSQL analytics agent exposed as an MCP server"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Archimedes Market" }]
keywords = ["mcp", "postgres", "analytics", "database", "observability"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
]
dependencies = [
  "mcp[cli]>=1.23.0",
  "asyncpg>=0.29.0",
  "pydantic>=2.7.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
]

[project.scripts]
mcp-postgres-analytics = "mcp_postgres_analytics.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_postgres_analytics"]
