[project]
name = "openapi-to-mcp"
version = "0.9.0"
description = "Generate, run, and test Node.js/TypeScript MCP servers from OpenAPI specifications."
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Nihal Rao", email = "nihaliddya@gmail.com" }]
dependencies = [
    "click==8.3.3",
    "requests==2.33.1",
    "pyyaml==6.0.3",
    "jinja2==3.1.6",
    "openapi-spec-validator==0.8.5",
    "mcp==1.27.0",
    "rich==15.0.0",
    "rich-click==1.9.7",
    "structlog==25.5.0",
]

[project.scripts]
openapi-to-mcp = "openapi_to_mcp.cli:cli"

[dependency-groups]
dev = [
    "pre-commit==4.6.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "pytest-instafail==0.5.0",
    "ruff==0.15.12",
    "mkdocs==1.6.1",
    "mkdocs-material==9.7.6",
]

[tool.ruff]
# Common settings
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "ALL", 
]
ignore = [
    "D",        # Documentation rules
    "A003",     # Builtin Attribute shadowing
    "PTH118",   # os.path.join - pathlib is preferred
    "PTH110",   # os.path.exists
    "PTH112",   # os.path.isdir
    "PTH123",   # builtin open - pathlib is preferred
    "INP001",   # implicit namespace package
    "E501",     # Line too long (handled by formatter)
    "COM812",   # Missing trailing comma (conflicts with formatter)
    "EM101",    # Exception string literal
    "EM102",    # Exception f-string literal
    "TRY003",   # Long exception message
]

[tool.ruff.lint.per-file-ignores]
# Ignore assert, private access, unused args, type annotations in tests
"tests/**" = [
    "S101",     # Use of assert detected
    "SLF001",   # Private member access
    "ARG001",   # Unused arguments
    "ANN401",   # Any type annotation
    "ANN001",   # Missing function argument annotation
    "ANN002",   # Missing *args type annotation
    "ANN003",   # Missing **kwargs type annotation
    "ANN202",   # Missing return type annotation for private function
    "B018",     # Useless expression
    "RET504",   # Unnecessary assignment before return
    "PLR2004",  # Magic value used in comparison
    "PT017"     # Found assertion in except block
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov-report=term-missing --cov-fail-under=80 --cov-report=xml:dist/test/coverage.xml --instafail -p no:cacheprovider"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openapi_to_mcp"]
